# manage-aiworkforce

./: .gitignore  README.md  pyproject.toml
agentsmith/: main.py
agentsmith/comparison/: __init__.py  eval_comparer.py
agentsmith/core/: metrics.py  test_runner.py  tool_simulator.py
agentsmith/evaluation/: __init__.py  agent_procedure_evaluator.py  base.py  hallucination_evaluator.py  safety_evaluator.py  setup_evaluator.py  tool_calling_evaluator.py
agentsmith/replay/: executor.py
agentsmith/utils/: data_extractors.py  json_utils.py  loader.py
aiworkforce/: agent.py  conversation.py  knowledge.py  snippet.py  tool.py  types.py  utils.py
aiworkforce/evaluation/: spoof.py
examples/: clone_agent_spoof_tools_for_eval.py  from_local_to_relevanceai.py  from_relevanceai_to_local.py  get_agent_conversation_costs.py  trigger_conversations_from_failure.py
manage_aiworkforce/: agent.py  conversation.py  knowledge.py  tool.py  types.py
